[gd_scene load_steps=11 format=3 uid="uid://q64jd3rbs8je"]

[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="1_f3mce"]
[ext_resource type="Texture2D" uid="uid://8cpkvnc78sok" path="res://assets/images/menus/menuBG.png" id="2_25v5u"]
[ext_resource type="Texture2D" uid="uid://bp6vjrko5h15c" path="res://assets/images/menus/checker.png" id="3_0fcn1"]
[ext_resource type="Texture2D" uid="uid://bok3v6ugegwr2" path="res://assets/images/menus/mainmenu/Main_Side.png" id="4_r6ooo"]
[ext_resource type="SpriteFrames" path="res://assets/images/menus/mainmenu/FNF_main_menu_assets.res" id="5_q5t4q"]

[sub_resource type="Gradient" id="Gradient_uhux3"]
offsets = PackedFloat32Array(0, 0.49505, 1)
colors = PackedColorArray(1, 0, 0, 0, 0.682353, 0.34902, 0.894118, 0.333333, 0.0980392, 0.92549, 1, 0.666667)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_056xk"]
gradient = SubResource("Gradient_uhux3")
width = 512

[sub_resource type="Animation" id="Animation_j6yp2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kyg7j"]
resource_name = "flash"
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.0601, 0.12, 0.18, 0.24, 0.3, 0.3001, 0.36, 0.42, 0.48, 0.54, 0.5401, 0.6, 0.66, 0.72, 0.78, 0.7801, 0.84, 0.9, 0.96),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false, true, false, true, true, false, true, false, true, true, false, true, false, true, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o48h0"]
_data = {
"RESET": SubResource("Animation_j6yp2"),
"flash": SubResource("Animation_kyg7j")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_f3mce")

[node name="MenuBG" type="Sprite2D" parent="."]
position = Vector2(640, 360)
rotation = 3.12414
scale = Vector2(1.1, 1.1)
texture = ExtResource("2_25v5u")

[node name="Gradient" type="Sprite2D" parent="."]
position = Vector2(640, 464)
rotation = 1.5708
scale = Vector2(1, 1280)
texture = SubResource("GradientTexture1D_056xk")

[node name="CheckerPattern" type="TextureRect" parent="."]
modulate = Color(0.882353, 0.352941, 0.678431, 1)
offset_right = 2860.0
offset_bottom = 1660.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0fcn1")
stretch_mode = 1

[node name="ButtonStuff" type="CanvasLayer" parent="."]

[node name="MainSide" type="Sprite2D" parent="ButtonStuff"]
texture = ExtResource("4_r6ooo")
centered = false

[node name="Buttons" type="Node2D" parent="ButtonStuff"]

[node name="Play" type="AnimatedSprite2D" parent="ButtonStuff/Buttons"]
position = Vector2(-800, 40)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("5_q5t4q")
animation = &"play idle"
centered = false

[node name="Support" type="AnimatedSprite2D" parent="ButtonStuff/Buttons"]
position = Vector2(-800, 240)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("5_q5t4q")
animation = &"support idle"
centered = false

[node name="Options" type="AnimatedSprite2D" parent="ButtonStuff/Buttons"]
position = Vector2(-800, 440)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("5_q5t4q")
animation = &"options idle"
centered = false

[node name="ButtonFlashing" type="AnimationPlayer" parent="."]
root_node = NodePath("../ButtonStuff/Buttons")
libraries = {
"": SubResource("AnimationLibrary_o48h0")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 6.0
